fix code style and integrate pylint in tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ envlist = py36
 [testenv]
 # install pytest in the virtualenv where commands will be executed
 deps = 
-  pytest
   -rrequirements.txt
 
-commands = pytest libfa
+commands =
+  pylint libfa
+  pytest libfa
